engine/tests/ui/render_gpu_params_unsupported.stderr
error[E0277]: the trait bound `Unsupported: GpuUniformField` is not satisfied
 --> tests/ui/render_gpu_params_unsupported.rs:8:12
  |
8 |     value: Unsupported,
  |            ^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `GpuUniformField` is not implemented for `Unsupported`
 --> tests/ui/render_gpu_params_unsupported.rs:4:1
  |
4 | struct Unsupported;
  | ^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `GpuUniformField`:
            [[f32; 4]; N]
            [[u32; 4]; N]
            [f32; 2]
            [f32; 3]
            [f32; 4]
            [i32; 2]
            [i32; 3]
            [i32; 4]
          and $N others

error[E0277]: the trait bound `Unsupported: GpuUniformField` is not satisfied
 --> tests/ui/render_gpu_params_unsupported.rs:6:10
  |
6 | #[derive(GpuUniform)]
  |          ^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `GpuUniformField` is not implemented for `Unsupported`
 --> tests/ui/render_gpu_params_unsupported.rs:4:1
  |
4 | struct Unsupported;
  | ^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `GpuUniformField`:
            [[f32; 4]; N]
            [[u32; 4]; N]
            [f32; 2]
            [f32; 3]
            [f32; 4]
            [i32; 2]
            [i32; 3]
            [i32; 4]
          and $N others
  = help: see issue #48214
  = note: this error originates in the derive macro `GpuUniform` (in Nightly builds, run with -Z macro-backtrace for more info)
